--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 
     <h2>Facpya</h2>
 
+    <h3>Roberto Musso</h3>
+
+    <p> Ya está, cuánta ambigüedad
+        Esta vida me va a matar
+        Mi corazón vacío no soporta una ausencia más
+        Y sé que dijo una vez
+        El Nobel de la paz asesinado al caer
+        "Es lo malo de ser bueno en este mundo cruel"</p>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, alias sequi! Magnam rem culpa dignissimos possimus molestias numquam recusandae, laboriosam nihil fuga suscipit ipsa esse reiciendis quod deserunt id repellat.</p>
 </body>
 </html>
